@@ -1,17 +1,0 @@
-// Copyright 2002-2011, University of Colorado
-
-package edu.colorado.phet.balancingchemicalequations.view.molecules;
-
-import edu.colorado.phet.balancingchemicalequations.model.Atom.F;
-
-/**
- * F2 molecule.
- *
- * @author Chris Malley (cmalley@pixelzoom.com)
- */
-public class F2Node extends TwoAtomNode {
-
-    public F2Node() {
-        super( new F(), new F() );
-    }
-}
