@@ -3,44 +3,51 @@
 package edu.colorado.phet.balancingchemicalequations.view.molecules;
 
 import edu.colorado.phet.balancingchemicalequations.model.Atom;
+import edu.colorado.phet.balancingchemicalequations.model.Atom.C;
+import edu.colorado.phet.balancingchemicalequations.model.Atom.S;
 import edu.colorado.phet.balancingchemicalequations.view.molecules.AtomNode.BigAtomNode;
 import edu.colorado.phet.common.piccolophet.util.PNodeLayoutUtils;
 import edu.umd.cs.piccolox.nodes.PComposite;
 
 /**
- * Base class for molecules with 2 atoms of the same size.
+ * Base class for molecules with 1 atom.
  * Origin is at geometric center of bounding rectangle.
+ * <p>
+ * There is technically no such thing as a single-atom molecule,
+ * but this allows us to simplify the equation model.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public abstract class TwoAtomNode extends PComposite {
+public abstract class OneAtomMoleculeNode extends PComposite {
 
     /**
      * Use this constructor when the 2 atoms are different.
      * @param leftAtom
      * @param rightAtom
      */
-    public TwoAtomNode( Atom leftAtom, Atom rightAtom ) {
+    public OneAtomMoleculeNode( Atom atom ) {
 
         // atom nodes
-        AtomNode atomLeft = new BigAtomNode( leftAtom );
-        AtomNode atomRight = new BigAtomNode( rightAtom );
+        AtomNode atomNode = new BigAtomNode( atom );
 
         // rendering order
         PComposite parentNode = new PComposite();
         addChild( parentNode );
-        parentNode.addChild( atomRight );
-        parentNode.addChild( atomLeft );
-
-        // layout
-        double x = 0;
-        double y = 0;
-        atomLeft.setOffset( x, y );
-        x = atomLeft.getFullBoundsReference().getMaxX() + ( 0.25 * atomRight.getFullBoundsReference().getWidth() );
-        y = atomLeft.getYOffset();
-        atomRight.setOffset( x, y );
+        parentNode.addChild( atomNode );
 
         // move origin to geometric center
         parentNode.setOffset( -PNodeLayoutUtils.getOriginXOffset( parentNode ), -PNodeLayoutUtils.getOriginYOffset( parentNode ) );
+    }
+
+    public static class CNode extends OneAtomMoleculeNode {
+        public CNode() {
+            super( new C() );
+        }
+    }
+
+    public static class SNode extends OneAtomMoleculeNode {
+        public SNode() {
+            super( new S() );
+        }
     }
 }
